test/untyped-def.err.expect
test/untyped-def.ktn:1:1: type error: missing type signature
