test/untyped-def.ktn
def untyped:
  __swap 2 3
